# nrf-knx-iot

./: LICENSE.md  README.md  README.rst  west.yml
api/: oc_core_res.c  oc_knx_fp.c  oc_ri.c
doc/: about_knxiot.rst  additional_resources.rst  conf.py  index.rst  knxiot_known_issues.rst  knxiot_release_notes.rst
doc/setting_up_knxiot_environment/: setting_up_hardware.rst  setting_up_knxiot_environment.rst  setting_up_sdk.rst
doc/testing_samples/: knxiot_testing.rst  nordic_knxiot_cli.rst  samples.rst
doc/testing_samples/knxiot_application_samples/: light_switch_actuator.rst  light_switch_sensor.rst
doc/testing_samples/testing_cases/: case_2.rst
docs/: about_knxiot.html  additional_resources.html  additional_resources.rst  conf.py  environment_setup.html  environment_setup.rst  genindex.html  index.html  index.rst  knxiot_known_issues.html  knxiot_known_issues.rst  knxiot_release_notes.html  knxiot_release_notes.rst  objects.inv  search.html  searchindex.js
docs/_sources/: environment_setup.rst.txt  knxiot_release_notes.rst.txt
docs/_sources/setting_up_knxiot_environment/: requirements.rst.txt  setting_up_knxiot_environment.rst.txt
docs/_sources/testing_samples/: knxiot_testing.rst.txt  samples_list.rst.txt  samples_overview.rst.txt
docs/_static/css/: nordic.css
docs/setting_up_knxiot_environment/: requirements.html  setting_up_hardware.html  setting_up_knxiot_environment.html  setting_up_sdk.html
docs/testing_samples/: environment_setup.html  genindex.html  knxiot_known_issues.html  knxiot_release_notes.html  knxiot_testing.html  knxiot_testing.rst  nordic_knxiot_cli.html  nordic_knxiot_cli.rst  objects.inv  samples.html  samples.rst  samples_list.html  search.html  searchindex.js
docs/testing_samples/_sources/: about_knxiot.rst.txt  (+2 more)
port/: oc_assert.h  oc_log.h
port/zephyr/: abort.c  clock.c  connectivity.c  dns-sd.c  oc_config.h  random.c  shell.c  storage.c
samples/light_switch_actuator/: CMakeLists.txt  Kconfig  prj.conf
samples/light_switch_sensor/: CMakeLists.txt  Kconfig  prj.conf
samples/light_switch_sensor/boards/: thingy53_nrf5340_cpuapp.conf
samples/light_switch_sensor/src/: main.c
(+15 files in other folders)
